@@ -60,6 +60,7 @@ Version 1.1.5 to be released
 - Enh #1699: Added capability to remove duplicated script files registered for different positions in CClientScript (Qiang)
 - Enh #1710: Upgraded treeview JavaScript to version 1.4.1 (mdomba)
 - Enh #1711: JavaScript registered in POS_LOAD will now be put in jQuery window load event instead of the previous global window load event (Qiang)
+- Enh #1742: Exposing the class map feature that was previously only available to core classes (Qiang)
 - Enh: Upgraded JQuery UI to 1.8.5 (Sam Dark)
 - Enh: Added checking for empty keywords in addSearchCondition(), to prevent adding unnecessary conditions (mdomba)
 - Enh: Added flushValues() method to the cache classes (Y!!)
